@@ -3557,7 +3557,7 @@ MagickExport unsigned int XGetWindowColor(Display *display,char *name)
   */
   (void) XQueryColor(display,window_attributes.colormap,&color);
   GetExceptionInfo(&exception);
-  path=GetMagickConfigurePath("rgb.txt",&exception);
+  path=GetMagickConfigurePath("rgb.txt",True,&exception);
   DestroyExceptionInfo(&exception);
   if (path == (char *) NULL)
     return(False);
