@@ -23,6 +23,10 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-07-31  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * Delegates/modules are restricted to hard-coded search paths (a
+    security feature suggested by Bob Friesenhahn).
+
 2002-07-29  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
   * Added SubstituteString to utility.c for performing substitions
     on strings.
