@@ -50,7 +50,7 @@
 <P><STRONG>DestroyMagick</STRONG>( void );</P>
 <P>void  <STRONG>DestroyMagickInfo</STRONG>( void );</P>
 <P>const char * <STRONG>GetImageMagick</STRONG>( const unsigned char *magick, const size_t length );</P>
-<P>char * <STRONG>GetMagickConfigurePath</STRONG>( const char *filename, ExceptionInfo *exception );</P>
+<P>char * <STRONG>GetMagickConfigurePath</STRONG>( const char *filename, const unsigned int restrict, ExceptionInfo *exception );</P>
 <P>const MagickInfo * <STRONG>GetMagickInfo</STRONG>( const char *name, Exception *exception );</P>
 <P>const char * <STRONG>GetMagickVersion</STRONG>( unsigned int *version );</P>
 <P><STRONG>InitializeMagick</STRONG>( const char *path );</P>
@@ -99,7 +99,7 @@ The length of the binary string.
            MagickSharePath
            Windows Resource</PRE>
 <P>The format of the GetMagickConfigurePath method is:</P>
-<blockquote>char *GetMagickConfigurePath ( const char *filename, <A HREF="types/ExceptionInfo.html">ExceptionInfo</A> *exception ); </blockquote><P>
+<blockquote>char *GetMagickConfigurePath ( const char *filename, const unsigned int restrict, <A HREF="types/ExceptionInfo.html">ExceptionInfo</A> *exception ); </blockquote><P>
 <FONT SIZE=-1>A</FONT> description of each parameter follows:</P>
 <DL><DT><DD><DL>
 <dd><p></p><dt><STRONG><A NAME="item_o_path%3A">path:</A></STRONG><BR>
@@ -112,9 +112,9 @@ Method GetMagickConfigurePath returns the path if the configuration file is foun
 
 <FONT SIZE=-1>A</FONT> character string representing the desired configuration file.
 <P></P>
-<dd><p></p><dt><STRONG><A NAME="item_o_filetype%3A">filetype:</A></STRONG><BR>
+<dd><p></p><dt><STRONG><A NAME="item_o_restrict%3A">restrict:</A></STRONG><BR>
 <DD>
-File type hint.
+restrict search to hard-coded paths only.
 <P></P>
 <dd><p></p><dt><STRONG><A NAME="item_o_exception%3A">exception:</A></STRONG><BR>
 <DD>
